objects/LopHoc__c.object
<CustomObject>
    <fields>
        <fullName>HocSinhDau__c</fullName>
        <label>HocSinhDau</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HocSinhRot__c</fullName>
        <label>HocSinhRot</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaLop__c</fullName>
        <displayFormat>LOP{00}</displayFormat>
        <label>MaLop</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SiSo__c</fullName>
        <label>SiSo</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TenLop__c</fullName>
        <label>TenLop</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>LopHoc</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>LopHoc Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LopHocs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>